--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
+  },
+  "packageManager": "yarn@4.5.1",
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "eslint --max-warnings 0 --format stylish --fix",
+      "prettier --write"
+    ],
+    "**/*.{ts,tsx,js,yml,yaml,json,md,ice}": [
+      "prettier --write"
+    ]
   }
 }
