--- a/package.json
+++ b/package.json
@@ -6,22 +6,43 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "proto:gen": "rimraf src/proto &&  proto-gen.sh",
+    "build:proto": "rimraf src/proto && mkdirp src/proto && globstar -- grpc_tools_node_protoc --experimental_allow_proto3_optional --ts_proto_out=./src/proto --ts_proto_opt=useExactTypes=false,outputTypeRegistry=false,outputServices=generic-definitions,outputServices=nice-grpc,stringEnums=true,oneof=unions-value,esModuleInterop=true --descriptor_set_out=./src/proto/protoset.bin --include_imports -I ./proto \"./@(proto_deps|proto)/**/*.proto\"",
+    "start:local": "cd envoy &&  docker compose up -d && cd .. && next dev --turbopack"
   },
   "dependencies": {
+    "@mantine/core": "^7.14.1",
+    "@mantine/hooks": "^7.14.1",
     "next": "15.0.3",
+    "nice-grpc": "^2.1.10",
+    "nice-grpc-web": "^3.3.5",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-query": "^3.39.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "-": "^0.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "glob": "^11.0.0",
+    "globstar": "^1.0.0",
+    "grpc-tools": "^1.12.4",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
     "lint-staged": "^15.2.10",
-    "postcss": "^8",
+    "mkdirp": "^3.0.1",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "protoc": "^1.1.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
+    "ts-proto": "^2.3.0",
     "typescript": "^5"
   },
   "lint-staged": {
