feat: [DP-437/DP-748] Добавл линтер, интернационализицию настроил окружение для фронта, форма логина

--- a/package.json
+++ b/package.json
@@ -7,29 +7,41 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "proto:gen": "rimraf src/proto &&  proto-gen.sh",
+    "proto:gen": "rimraf src/proto && proto-gen.sh",
     "build:proto": "rimraf src/proto && mkdirp src/proto && globstar -- grpc_tools_node_protoc --experimental_allow_proto3_optional --ts_proto_out=./src/proto --ts_proto_opt=useExactTypes=false,outputTypeRegistry=false,outputServices=generic-definitions,outputServices=nice-grpc,stringEnums=true,oneof=unions-value,esModuleInterop=true --descriptor_set_out=./src/proto/protoset.bin --include_imports -I ./proto \"./@(proto_deps|proto)/**/*.proto\"",
     "start:local": "cd envoy &&  docker compose up -d && cd .. && next dev --turbopack"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.8",
     "@mantine/core": "^7.14.1",
     "@mantine/hooks": "^7.14.1",
+    "@tanstack/react-query": "^5.61.4",
+    "@tanstack/react-query-devtools": "^5.61.4",
+    "lodash.isempty": "^4.4.0",
+    "memoize-one": "^6.0.0",
+    "negotiator": "^1.0.0",
     "next": "15.0.3",
     "nice-grpc": "^2.1.10",
+    "nice-grpc-client-middleware-retry": "^3.1.9",
     "nice-grpc-web": "^3.3.5",
+    "pino": "^9.5.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-query": "^3.39.3",
+    "react-hot-toast": "^2.4.1",
+    "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "-": "^0.0.1",
+    "@types/lodash.isempty": "^4",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-plugin-import": "^2.31.0",
     "glob": "^11.0.0",
     "globstar": "^1.0.0",
     "grpc-tools": "^1.12.4",
