--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "proto:gen": "rimraf src/proto && proto-gen.sh",
-    "build:proto": "rimraf src/proto && mkdirp src/proto && globstar -- grpc_tools_node_protoc --experimental_allow_proto3_optional --ts_proto_out=./src/proto --ts_proto_opt=useExactTypes=false,outputTypeRegistry=false,outputServices=generic-definitions,outputServices=nice-grpc,stringEnums=true,oneof=unions-value,esModuleInterop=true --descriptor_set_out=./src/proto/protoset.bin --include_imports -I ./proto \"./@(proto_deps|proto)/**/*.proto\"",
+    "build:proto": "rimraf src/shared/proto && mkdirp src/shared/proto && globstar -- grpc_tools_node_protoc --experimental_allow_proto3_optional --ts_proto_out=./src/shared/proto --ts_proto_opt=useExactTypes=false,outputTypeRegistry=false,outputServices=generic-definitions,outputServices=nice-grpc,stringEnums=true,oneof=unions-value,esModuleInterop=true --descriptor_set_out=./src/shared/proto/protoset.bin --include_imports -I ./proto \"./proto/**/*.proto\"",
     "start:local": "cd envoy &&  docker compose up -d && cd .. && next dev --turbopack"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
     "lodash.isempty": "^4.4.0",
+    "lucide-react": "^0.468.0",
     "memoize-one": "^6.0.0",
     "negotiator": "^1.0.0",
     "next": "15.0.3",
@@ -27,6 +28,7 @@
     "pino": "^9.5.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
