upd - [DP-440] user filters, actions, pagination

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^7.14.1",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
+    "dayjs": "^1.11.13",
     "lodash.isempty": "^4.4.0",
     "lucide-react": "^0.468.0",
     "memoize-one": "^6.0.0",
