--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "nice-grpc-client-middleware-retry": "^3.1.9",
     "nice-grpc-web": "^3.3.5",
     "pino": "^9.5.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hot-toast": "^2.4.1",
     "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
@@ -66,7 +66,7 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@4.5.1",
+  "packageManager": "yarn@4.5.3",
   "engines": {
     "node": ">=22.0.0"
   }
