--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@formatjs/intl-localematcher": "^0.5.8",
     "@mantine/core": "^7.14.1",
     "@mantine/hooks": "^7.14.1",
+    "@mantine/notifications": "^7.15.1",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
+    "axios": "^1.7.9",
     "lodash.isempty": "^4.4.0",
     "memoize-one": "^6.0.0",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.1.0",
     "negotiator": "^1.0.0",
     "next": "15.0.3",
     "nice-grpc": "^2.1.10",
