--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
     "axios": "^1.7.9",
+    "cookies-next": "^5.0.2",
+    "js-cookie": "^3.0.5",
     "lodash.isempty": "^4.4.0",
     "memoize-one": "^6.0.0",
     "mobx": "^6.13.5",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "-": "^0.0.1",
+    "@types/js-cookie": "^3",
     "@types/lodash.isempty": "^4",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
