--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pino": "^9.5.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
@@ -44,7 +45,7 @@
     "eslint-plugin-import": "^2.31.0",
     "glob": "^11.0.0",
     "globstar": "^1.0.0",
-    "grpc-tools": "^1.12.4",
+    "grpc-tools": "1.11.3",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "lint-staged": "^15.2.10",
     "mkdirp": "^3.0.1",
@@ -53,6 +54,7 @@
     "postcss-simple-vars": "^7.0.1",
     "protoc": "^1.1.3",
     "rimraf": "^6.0.1",
+    "steiger": "^0.5.3",
     "tailwindcss": "^3.4.1",
     "ts-proto": "^2.3.0",
     "typescript": "^5"
