--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tanstack/react-query-devtools": "^5.61.4",
     "axios": "^1.7.9",
     "cookies-next": "^5.0.2",
+    "countries-list": "^3.1.1",
     "dayjs": "^1.11.13",
+    "i18n-iso-countries": "^7.13.0",
     "js-cookie": "^3.0.5",
     "lodash.isempty": "^4.4.0",
     "lucide-react": "^0.468.0",
