--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prepare": "husky ",
     "proto:gen": "rimraf src/shared/proto && proto-gen.sh",
     "build:proto": "rimraf src/shared/proto && mkdirp src/shared/proto && globstar -- grpc_tools_node_protoc --experimental_allow_proto3_optional --ts_proto_out=./src/shared/proto --ts_proto_opt=useExactTypes=false,outputTypeRegistry=false,outputServices=generic-definitions,outputServices=nice-grpc,stringEnums=true,oneof=unions-value,esModuleInterop=true --descriptor_set_out=./src/shared/proto/protoset.bin --include_imports -I ./proto \"./@(proto_deps|proto)/**/*.proto\"",
     "start:local": "cd envoy &&  docker compose up -d && cd .. && next dev -p 4001 --turbopack"
@@ -44,6 +45,8 @@
   },
   "devDependencies": {
     "-": "^0.0.1",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@types/js-cookie": "^3",
     "@types/lodash.isempty": "^4",
     "@types/negotiator": "^0.6.3",
@@ -58,11 +61,13 @@
     "globstar": "^1.0.0",
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "mkdirp": "^3.0.1",
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.4.2",
     "protoc": "^1.1.3",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
