--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.13",
     "i18n-iso-countries": "^7.13.0",
     "js-cookie": "^3.0.5",
+    "js-sha256": "^0.11.0",
     "lodash.isempty": "^4.4.0",
     "lucide-react": "^0.468.0",
     "memoize-one": "^6.0.0",
