--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.8",
     "@mantine/core": "^7.14.1",
-    "@mantine/hooks": "^7.14.1",
     "@mantine/dates": "^7.15.1",
+    "@mantine/hooks": "^7.14.1",
     "@mantine/notifications": "^7.15.1",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
@@ -57,7 +57,11 @@
     "@types/ws": "^8",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
     "glob": "^11.0.0",
     "globstar": "^1.0.0",
     "grpc-tools": "^1.12.4",
