--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mantine/dates": "^7.15.1",
     "@mantine/hooks": "^7.14.1",
     "@mantine/notifications": "^7.15.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "cookies-next": "^5.0.2",
     "countries-list": "^3.1.1",
     "dayjs": "^1.11.13",
@@ -42,6 +44,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "server-only": "^0.0.1",
     "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
   },
