--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/hooks": "^7.14.1",
     "@mantine/notifications": "^7.15.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tabler/icons-react": "^3.29.0",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.61.4",
     "axios": "^1.7.9",
@@ -31,6 +32,7 @@
     "js-sha256": "^0.11.0",
     "lodash.isempty": "^4.4.0",
     "lucide-react": "^0.473.0",
+    "mantine-react-table": "^2.0.0-beta.8",
     "memoize-one": "^6.0.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.1.0",
