--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookies-next": "^5.0.2",
     "countries-list": "^3.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.0.6",
     "i18n-iso-countries": "^7.13.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.11.0",
