--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-simple-captcha": "^9.3.1",
     "server-only": "^0.0.1",
     "use-memo-one": "^1.1.3",
     "ws": "^8.18.0"
