--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18n-iso-countries": "^7.13.0",
     "js-cookie": "^3.0.5",
     "js-sha256": "^0.11.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash.isempty": "^4.4.0",
     "lucide-react": "^0.473.0",
     "mantine-react-table": "^2.0.0-beta.8",
@@ -57,6 +58,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@types/js-cookie": "^3",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/lodash.isempty": "^4",
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
