--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack ",
     "build": "next build",
     "start": "next start",
+    "test": "vitest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky ",
     "proto:gen": "rimraf src/shared/proto && proto-gen.sh",
@@ -57,6 +58,8 @@
     "-": "^0.0.1",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/js-cookie": "^3",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/lodash.isempty": "^4",
@@ -65,6 +68,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -77,6 +81,7 @@
     "grpc-tools": "^1.12.4",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.2.10",
     "mkdirp": "^3.0.1",
     "postcss": "^8.4.49",
@@ -86,7 +91,9 @@
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "ts-proto": "^2.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.7"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
